@@ -253,17 +253,16 @@ static apr_status_t internals_setup(md_http_request_t *req)
             rv = APR_EGENERAL;
             goto leave;
         }
+        curl_easy_setopt(curl, CURLOPT_HEADERFUNCTION, header_cb);
+        curl_easy_setopt(curl, CURLOPT_HEADERDATA, NULL);
+        curl_easy_setopt(curl, CURLOPT_READFUNCTION, req_data_cb);
+        curl_easy_setopt(curl, CURLOPT_READDATA, NULL);
+        curl_easy_setopt(curl, CURLOPT_WRITEFUNCTION, resp_data_cb);
+        curl_easy_setopt(curl, CURLOPT_WRITEDATA, NULL);
     }
     else {
         md_log_perror(MD_LOG_MARK, MD_LOG_TRACE3, 0, req->pool, "reusing curl instance from http");
     }
-
-    curl_easy_setopt(curl, CURLOPT_HEADERFUNCTION, header_cb);
-    curl_easy_setopt(curl, CURLOPT_HEADERDATA, NULL);
-    curl_easy_setopt(curl, CURLOPT_READFUNCTION, req_data_cb);
-    curl_easy_setopt(curl, CURLOPT_READDATA, NULL);
-    curl_easy_setopt(curl, CURLOPT_WRITEFUNCTION, resp_data_cb);
-    curl_easy_setopt(curl, CURLOPT_WRITEDATA, NULL);
 
     internals = apr_pcalloc(req->pool, sizeof(*internals));
     internals->curl = curl;
@@ -442,33 +441,41 @@ static void add_to_curlm(md_http_request_t *req, CURLM *curlm)
 {
     md_curl_internals_t *internals = req->internals;
     
-    if (curlm && internals && internals->curlm == NULL) {
-        curl_multi_add_handle(curlm, internals->curl);
+    assert(curlm);
+    assert(internals);
+    if (internals->curlm == NULL) {
         internals->curlm = curlm;
     }
+    assert(internals->curlm == curlm);
+    curl_multi_add_handle(curlm, internals->curl);
 }
 
-static void remove_from_curlm(md_http_request_t *req, CURLM *curlm)
+static void remove_from_curlm_and_destroy(md_http_request_t *req, CURLM *curlm)
 {
     md_curl_internals_t *internals = req->internals;
 
-    if (curlm && internals && internals->curlm == curlm) {
-        curl_multi_remove_handle(curlm, internals->curl);
-        internals->curlm = NULL;
-    }
+    assert(curlm);
+    assert(internals);
+    assert(internals->curlm == curlm);
+    curl_multi_remove_handle(curlm, internals->curl);
+    internals->curlm = NULL;
+    md_http_req_destroy(req);
 }
     
 static apr_status_t md_curl_multi_perform(md_http_t *http, apr_pool_t *p,
                                           md_http_next_req *nextreq, void *baton)
 {
+    md_http_t *sub_http;
     md_http_request_t *req;
     CURLM *curlm = NULL;
     CURLMcode mc;
     struct CURLMsg *curlmsg;
+    apr_array_header_t *http_spares;
     apr_array_header_t *requests;
     int i, running, numfds, slowdown, msgcount;
     apr_status_t rv;
     
+    http_spares = apr_array_make(p, 10, sizeof(md_http_t*));
     requests = apr_array_make(p, 10, sizeof(md_http_request_t*));
     curlm = curl_multi_init();
     if (!curlm) {
@@ -481,35 +488,46 @@ static apr_status_t md_curl_multi_perform(md_http_t *http, apr_pool_t *p,
     while(1) {
         while (1) {
             /* fetch as many requests as nextreq gives us */
-            rv = nextreq(&req, baton, http, requests->nelts);
-            
-            if (APR_SUCCESS == rv) {
-                if (APR_SUCCESS != (rv = internals_setup(req))) {
-                    if (req->cb.on_status) req->cb.on_status(req, rv, req->cb.on_status_data);
-                    md_log_perror(MD_LOG_MARK, MD_LOG_TRACE3, rv, p, 
-                                  "multi_perform[%d reqs]: setup failed", requests->nelts);
-                }
-                else {
-                    APR_ARRAY_PUSH(requests, md_http_request_t*) = req;
-                    add_to_curlm(req, curlm);
-                    md_log_perror(MD_LOG_MARK, MD_LOG_TRACE3, rv, p, 
-                                  "multi_perform[%d reqs]: added request", requests->nelts);
-                }
-                continue;
+            if (http_spares->nelts > 0) {
+                sub_http = *(md_http_t **)(apr_array_pop(http_spares));
             }
-            else if (APR_STATUS_IS_ENOENT(rv)) {
-                md_log_perror(MD_LOG_MARK, MD_LOG_TRACE3, 0, p, 
+            else {
+                rv = md_http_clone(&sub_http, p, http);
+                if (APR_SUCCESS != rv) {
+                    md_log_perror(MD_LOG_MARK, MD_LOG_ERR, rv, p,
+                                  "multi_perform[%d reqs]: setup failed", requests->nelts);
+                    goto leave;
+                }
+            }
+
+            rv = nextreq(&req, baton, sub_http, requests->nelts);
+            if (APR_STATUS_IS_ENOENT(rv)) {
+                md_log_perror(MD_LOG_MARK, MD_LOG_TRACE3, 0, p,
                               "multi_perform[%d reqs]: no more requests", requests->nelts);
                 if (!requests->nelts) {
                     goto leave;
                 }
                 break;
             }
-            else {
-                md_log_perror(MD_LOG_MARK, MD_LOG_TRACE3, rv, p, 
+            else if (APR_SUCCESS != rv) {
+                md_log_perror(MD_LOG_MARK, MD_LOG_TRACE3, rv, p,
                               "multi_perform[%d reqs]: nextreq() failed", requests->nelts);
+                APR_ARRAY_PUSH(http_spares, md_http_t*) = sub_http;
                 goto leave;
             }
+
+            if (APR_SUCCESS != (rv = internals_setup(req))) {
+                if (req->cb.on_status) req->cb.on_status(req, rv, req->cb.on_status_data);
+                md_log_perror(MD_LOG_MARK, MD_LOG_TRACE3, rv, p,
+                              "multi_perform[%d reqs]: setup failed", requests->nelts);
+                APR_ARRAY_PUSH(http_spares, md_http_t*) = sub_http;
+                goto leave;
+            }
+
+            APR_ARRAY_PUSH(requests, md_http_request_t*) = req;
+            add_to_curlm(req, curlm);
+            md_log_perror(MD_LOG_MARK, MD_LOG_TRACE3, rv, p,
+                          "multi_perform[%d reqs]: added request", requests->nelts);
         }
     
         mc = curl_multi_perform(curlm, &running);
@@ -544,9 +562,10 @@ static apr_status_t md_curl_multi_perform(md_http_t *http, apr_pool_t *p,
                                   requests->nelts, req->id);
                     update_status(req);
                     fire_status(req, curl_status(curlmsg->data.result));
-                    remove_from_curlm(req, curlm);
                     md_array_remove(requests, req);
-                    md_http_req_destroy(req);
+                    sub_http = req->http;
+                    APR_ARRAY_PUSH(http_spares, md_http_t*) = sub_http;
+                    remove_from_curlm_and_destroy(req, curlm);
                 }
                 else {
                     md_log_perror(MD_LOG_MARK, MD_LOG_DEBUG, 0, p, 
@@ -563,8 +582,9 @@ leave:
     for (i = 0; i < requests->nelts; ++i) {
         req = APR_ARRAY_IDX(requests, i, md_http_request_t*);
         fire_status(req, APR_SUCCESS);
-        remove_from_curlm(req, curlm);
-        md_http_req_destroy(req);
+        sub_http = req->http;
+        APR_ARRAY_PUSH(http_spares, md_http_t*) = sub_http;
+        remove_from_curlm_and_destroy(req, curlm);
     }
     if (curlm) curl_multi_cleanup(curlm);
     return rv;
@@ -585,7 +605,19 @@ static void md_curl_req_cleanup(md_http_request_t *req)
     md_curl_internals_t *internals = req->internals;
     if (internals) {
         if (internals->curl) {
-            curl_easy_cleanup(internals->curl);
+            CURL *curl = md_http_get_impl_data(req->http);
+            if (curl == internals->curl) {
+                /* NOP: we have this curl at the md_http_t already */
+            }
+            else if (!curl) {
+                /* no curl at the md_http_t yet, install this one */
+                md_log_perror(MD_LOG_MARK, MD_LOG_TRACE3, 0, req->pool, "register curl instance at http");
+                md_http_set_impl_data(req->http, internals->curl);
+            }
+            else {
+                /* There already is a curl at the md_http_t and it's not this one. */
+                curl_easy_cleanup(internals->curl);
+            }
         }
         if (internals->req_hdrs) curl_slist_free_all(internals->req_hdrs);
         req->internals = NULL;
